		* Improvement of guards on the Test and LG Panels: Made all 4 guards on this 2 panels working
		* Improvement of the Tacan Panel: add the 2 potentiometers and made them continuous and working
		* Improvement of VOR/ILS Panel: added the 2 potentiometers and made them continuous and working and made the Mode Selector working
		* Improvement of the HSI Panel: all the needles are working
* Known issues: 
		* Fuel Panel: the Fuel CrossFeed Switch doesn’t work, the two toggle switches don’t work (seem not to be used in DCS)
		* Master Caution lights Panel: the click on the 2 indicators doesn’t work
		* HSI Panel: the potentiometer doesn’t work properly
		* ECM Box: the potentiometer is not working
		* UHF Panel: nothing is working from Helios to DCS
		
1.4.2019.0930 Release
----------------------------
* M2000C Interface 
	* Added the Fuel Panel with the 7 empty tanks indicators, the refueling indicator, the left and right neddle gauges and the JAUG and DETOT drums
	* Added the PPA Panel with the 8 indicators on the buttons, the 4 buttons and the 5 switches
	* Added the PCA Panel with the 17 indicators on the buttons, the 11 buttons, the 2 switches and the guard on the Jettison switch
	* Added the PCN	Panel with the 9 indicators, the 9 indicators buttons, the 10 keypad buttons and the Parameter selector working only from DCS to Helios
	* Added the TACAN Panel with the frequency display and the 2 switches (X/Y Mode and Mode Select) working only from DCS to Helios
	* Added the VOR/ILS Panel with the frequency display and the 2 switches (Power and Mode Select)	
	* Added the Engine Sensors Panel (still in beta) with the 2 needles and the drum
	* Added the HSI Panel (still in beta) with the drum, the 4 stop flags, the 2 needles, the green needle, the mode needle, the compass rose, the switch and the potentiometer
	* Added the ECM Box with the potentiometer and the 3 switches
	* Added the INS Panel with the 2 switches